# messagemedia-simple

./: .gitignore  README.md  messagemedia_rest.py  messagemedia_test.py  pyproject.toml
.circleci/: config.yml
messagemedia_simple/: __init__.py  messagemedia_rest.py  messages_api.py
test/: messagemedia_test.py  package_test.py
