[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "messagemedia-simple"
version = "0.1.0"
license = "MIT"
description = "Simple MessageMedia module for sending SMS messages."
authors = ["Michael Ludvig <mludvig@logix.net.nz>"]
keywords = [ 'messagemedia', 'sms' ]

[tool.poetry.dependencies]
python = "^3.6"
#responses = "^0.10.9"  # Only needed for testing - see below in tox

[tool.poetry.dev-dependencies]
pytest = ""
responses = ""

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py36,py37,py38

[testenv]
deps =
  pytest
  responses
commands =
  pytest -v

[tox:.package]
basepython = python3
"""
